I Am Dumb. tooltips z-index fixed

--- a/frontend/src/styles/boardSelect.css
+++ b/frontend/src/styles/boardSelect.css
@@ -74,7 +74,6 @@
 }
 #R_select a{
     position: relative;
-    z-index: 0;
 }
 #R_select .boardCard {
     transition: all 0.25s ease-out;
@@ -82,15 +81,14 @@
     background-image: #832;
     margin: 10px;
     padding: 10px;
-    width: 200px;
-    height: 200px;
+    width: 180px;
+    height: 180px;
     display: inline-block;
     box-sizing: border-box;
     border-radius: 5px;
     border: 2px outset #f77;
     box-shadow: 3px 4px 0px #0003;
     opacity: 0;
-    z-index: 10;
 }
 /*
 #R_select a:nth-child(1) .boardCard { animation-delay: 0s;}
@@ -118,7 +116,6 @@
     box-shadow: 5px 7px 5px #0005;
 }
 #boardSelect {
-    z-index: 0;
     padding: 15px;
     margin: 20px;
     background-image: linear-gradient(to right bottom, #836 0%, #43a 100%);
@@ -177,6 +174,10 @@
 #header {
     text-align: center;
     font-weight: 200;
+    width: fit-content;
+    position: relative;
+    left:50%;
+    transform: translate(-50%);
 }
 #header #sort{
     font-size: 20px;
